# product-duplicate-detection-lsh

./: .gitignore  README.md  constants.py  encoder.py  lsh.py  main.py  pyproject.toml  requirements.txt
.github/: dependabot.yaml
src/pdd/: encoder.py  lsh.py  main.py  minhashing.py
src/pdd/utils/: paths.py
