[project]
name = "pdd"
version = "0.1.0"
description = "Scalable Product Duplicate Detection using LSH"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "matplotlib==3.10.8",
    "numpy==1.26.4",
    "pandas==2.3.3",
    "scikit-learn==1.8.0",
    "scipy==1.16.3",
    "tqdm==4.67.1",
]

[project.scripts]
example = "pdd:main"

[build-system]
requires = ["uv_build>=0.9.14,<0.10.0"]
build-backend = "uv_build"
